--- a/FrontEnd/src/app/Administrador/gestion-de-puestos/gestion-de-puestos.component.html
+++ b/FrontEnd/src/app/Administrador/gestion-de-puestos/gestion-de-puestos.component.html
@@ -1,18 +1,20 @@
 <button class="btn btn-dark largo" data-bs-toggle="modal" data-bs-target="#crearPuesto">Agregar un nuevo puesto</button>
 
 
-<div class="container">
+<div class="container" *ngFor="let item of listaPuesto">
     <div class="row">
       <div class="col col1">
-          <img src="https://www.tiovivocreativo.com/wp-content/uploads/2020/02/interiorismo-dise%C3%B1o-gimnasios-planificar-espacios.jpg" alt="">
+          <img src="{{item.imagen}}" alt="">
       </div>
       <div class="col col2">
-        <div class="row"><h3><b>Numero de indentificador</b></h3></div>
-        <div class="row"><label>Dirrecion:</label></div>
-        <div class="row"><label>Texto</label></div>
+        <div class="row"><h3><b>Numero de indentificador:{{item.id}}</b></h3></div>
+        <div class="row"><label>Texto: {{item.nombre}}</label></div>
+        <div class="row"><label>Descripcion:{{item.descripcion}}</label></div>
         <div class="row btn2">
-        <div class="col"><button class="btn btn-primary btn1" data-bs-toggle="modal" data-bs-target="#editarPuesto">Editar Puesto</button></div>
-        <div class="col"><button class="btn btn-danger btn2" data-bs-toggle="modal" data-bs-target="#eliminarPuesto">Eliminar Puesto</button></div>
+        <div class="col"><button class="btn btn-primary btn1" data-bs-toggle="modal" data-bs-target="#editarPuesto"
+        (click)="obtenerInformacionItem(item)">Editar Puesto</button></div>
+        <div class="col"><button class="btn btn-danger btn2" data-bs-toggle="modal" data-bs-target="#eliminarPuesto"
+        (click)="obtenerInformacionItem(item)">Eliminar Puesto</button></div>
         </div>
       </div>
     </div>
@@ -29,23 +31,26 @@
 
         <div class="tamano3">
           <label>Imagen Del Puesto:</label>
-          <input type="text" class="form-control" name="nombre" id="imagePuesto" required="">
+          <input type="text" class="form-control" name="nombre" id="imagePuesto" required=""
+                 #imagen="ngModel" [(ngModel)]="puesto.imagen">
         </div>
 
         <div class="tamano3">
           <label>Nombre Del Puesto:</label>
-          <input type="text" class="form-control" name="nombre" id="nombrePuesto" required="">
+          <input type="text" class="form-control" name="nombre" id="nombrePuesto" required=""
+                 #nombre="ngModel" [(ngModel)]="puesto.nombre">
         </div>
 
         <div class="tamano3">
           <label>Descripcion:</label>
-          <input type="text" class="form-control" name="nombre" id="descripcionPuesto" required="">
+          <input type="text" class="form-control" name="nombre" id="descripcionPuesto" required=""
+                 #descripcion="ngModel" [(ngModel)]="puesto.descripcion">
         </div>
 
 
       </div>
       <div class="modal-footer">
-        <button type="submit" class="btn btn-primary" name="7">Aceptar</button>
+        <button type="submit" class="btn btn-primary" name="7" (click)="crearPuesto(puesto)">Aceptar</button>
 
         <button data-bs-dismiss="modal" class="btn btn-danger" name="8">Cancelar</button>
       </div>
@@ -64,22 +69,25 @@
 
       <div class="tamano3">
         <label>Imagen Del Puesto:</label>
-        <input type="text" class="form-control" name="nombre" id="imagePuesto1" required="">
+        <input type="text" class="form-control" name="nombre" id="imagePuesto1" required=""
+               #imagen="ngModel" [(ngModel)]="puestoActual.imagen">
       </div>
 
       <div class="tamano3">
         <label>Nombre Del Puesto:</label>
-        <input type="text" class="form-control" name="nombre" id="nombrePuesto1" required="">
+        <input type="text" class="form-control" name="nombre" id="nombrePuesto1" required=""
+               #nombre="ngModel" [(ngModel)]="puestoActual.nombre">>
       </div>
 
       <div class="tamano3">
         <label>Descripcion:</label>
-        <input type="text" class="form-control" name="nombre" id="descripcionPuesto1" required="">
+        <input type="text" class="form-control" name="nombre" id="descripcionPuesto1" required=""
+               #descripcion="ngModel" [(ngModel)]="puestoActual.descripcion">>
       </div>
 
     </div>
     <div class="modal-footer">
-      <button type="submit" class="btn btn-primary" name="7">Aceptar</button>
+      <button type="submit" class="btn btn-primary" name="7" (click)="editarPuesto(puestoActual)">Aceptar</button>
 
       <button data-bs-dismiss="modal" class="btn btn-danger" name="8">Cancelar</button>
     </div>
@@ -91,11 +99,11 @@
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
       <div class="modal-header">
-        <h3 class="modal-title" id="eliminarPuestoLabel">Esta Seguro que desea eliminar el Puesto: Nombre</h3>
+        <h3 class="modal-title" id="eliminarPuestoLabel">Esta Seguro que desea eliminar el Puesto:{{puestoActual.nombre}}</h3>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-footer">
-        <button type="submit" class="btn btn-primary" name="7">Aceptar</button>
+        <button type="submit" class="btn btn-primary" name="7" (click)="eliminarPuesto(puestoActual)">Aceptar</button>
 
         <button data-bs-dismiss="modal" class="btn btn-danger" name="8">Cancelar</button>
       </div>
