--- a/FrontEndCliente/src/app/inicio-cliente/inicio-cliente.component.css
+++ b/FrontEndCliente/src/app/inicio-cliente/inicio-cliente.component.css
@@ -1,20 +1,7 @@
-h2 {
-    margin: 0;
-    font-size: 16px;
-  }
-  
-  ul {
-    margin: 0;
-    padding: 0 0 0 1.5em;
-  }
-  
-  li {
-    margin: 1.5em 0;
-    padding: 0;
-  }
-  
+ 
   b { /* used for event dates/times */
     margin-right: 3px;
+    font:  12px Georgia, 'Times New Roman', Times, serif;
   }
   
   .demo-app {
@@ -25,14 +12,13 @@ h2 {
   }
   
   .demo-app-sidebar {
-    width: 300px;
+    width: 25%;
+    padding:1%;
+    min-height: 100vh;
     line-height: 1.5;
-    background: #eaf9ff;
-    border-right: 1px solid #d3e2e8;
-  }
-  
-  .demo-app-sidebar-section {
-    padding: 2em;
+    background: linear-gradient(65deg, #293233   , #1F393A   ) ;
+    color: white;
+    box-shadow: 1px 8px 8px 0px rgba(31, 57, 58, 0.5);
   }
   
   .demo-app-main {
@@ -44,4 +30,182 @@ h2 {
     max-width: 1100px;
     margin: 0 auto;
   }
+
+  body,html{
+    background: linear-gradient(45deg, #e7e3d6   , #6b6b69  );
+    align-content: center;
+    
+    }
+    
+    h6, h5, h4, h3, h2, h1, p{
+      text-align: left;
+      color: white ;
+      margin-left: 5%;
+      font:  Georgia, 'Times New Roman', Times, serif;
+    }
+    
+    p{
+      text-align: left;
+      width: 75%;
+      margin-left: 12.5%;
+      margin-top: 5%;
+      padding-top: 10px;
+      color: white;
+      font-size: 12px;
+      font:  14px Georgia, 'Times New Roman', Times, serif;
+    }
+    
+    
+    input{
+      border:none;
+      background-color: transparent;
+      color: #293233 ;
+      font:  12px;
+    }
+    
+    input::placeholder{
+      color: #293233 ;
+    }
+    
+    input:focus,
+    select:focus,
+    textarea:focus,
+    button:focus,
+    select:focus {
+        background-color: transparent;
+        border: transparent;
+        outline: transparent;
+    
+    }
+    
+    .container{
+      position: absolute;
+      left: 27.5%;
+      width: 50%; 
+      padding: 3%;
+      /* box-shadow: 1px 8px 8px 0px rgba(196, 206, 141, 0.3); */
+    }
+    
+    .input-group{
+      border-color:transparent ;
+      border-radius: 30px;
+      padding: 5px;
+      margin: 20px;
+      padding-left: 30px;
+      background: linear-gradient(45deg, #d9f0e6   , #daffef   ) ;
+      color: #293233;
+      box-shadow: 1px 8px 8px 0px rgba(31, 57, 58, 0.5);
+      width: 75%;
+      
+  
+    }
+    
+    label{
+      margin-top: 5px;
+    }
+  
+    button {
+      border-color:transparent ;
+      border-radius: 30px;
+      padding: 5px;
+      margin: 20px;
+      background: linear-gradient(65deg, #d8353d   , #f04b53   ) ;
+      color: #293233;
+      box-shadow: 1px 8px 8px 0px rgba(31, 57, 58, 0.5);
+      width: 75%;
+    }
+
+    .secondary {
+      background: linear-gradient(65deg, #d9f05b   , #c4d17c   ) ;
+      margin-top: 0%;
+
+    }
+    
+    .marginLeft{
+      margin-left: 5%;
+      color: #293233;
+      padding-bottom: 2%;
+      font-size: 15px
+    }
+    
+    .marginRight{
+      margin-right: 5%;
+      color: #293233;
+      padding-bottom: 2%;
+      font-size: 15px
+    }
+    
+    .marginRight:hover{
+      color: #F5881F;
+    }
+    
+    .logo{
+      margin-top:5%;
+      width: 45%;
+      margin-left: 27.5%;
+    }
+    
+    .InfoContainer{
+      position: absolute;
+        background: linear-gradient(45deg, #C4CE8D   , #535831  ) ;
+        border-top-right-radius: 50px;
+        border-bottom-right-radius: 50px;
+        border-left-style: solid;
+        border-left-width: 10px;
+        border-left-color: #1F393A;
+        /*dim the background*/
+        top:0;
+        left:50%;
+        width:50%;
+        height:100%;
+      
+    }
+
+.modal {
+  background-color: #1F393A;
+  color: #1F393A;
+
+}
+
+.tertiary {
+  background: linear-gradient(65deg, #d9f05b   , #c4d17c ) ;
+  margin-top: 0%;
+  width: 50%;
+  height: auto;
+  padding: 10px;
+  box-shadow: 1px 2px 2px 0px rgba(31, 57, 58, 0.2);
+
+}
+
+.card-text, .card-subtitle, .card-title, .modal-title{
+  color: #1F393A;
+  margin:0%;
+}
+
+
+.card{
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+.card-button{
+  border-color:transparent ;
+  border-radius: 30px;
+  margin: 0%;
+  padding: 5px;
+  background: linear-gradient(65deg, #d8353d   , #f04b53   ) ;
+  color: white;
+  box-shadow: 1px 2px 2px 0px rgba(31, 57, 58, 0.2);
+
+}
+
+.tertiary:hover,
+.secondary:hover {
+  color: white;
+  border-color:teal;
+}
+
+.input-group:hover{
+  color: #2A7B6B;
+}
   
