--- a/FrontEndCliente/src/app/inicio-cliente/inicio-cliente.component.html
+++ b/FrontEndCliente/src/app/inicio-cliente/inicio-cliente.component.html
@@ -1,80 +1,137 @@
+<html>
 
-<div class='demo-app'>
+<body>
 
-  <div class='demo-app-sidebar'>
-    
-    <div class='demo-app-sidebar-section'>
-      
+
+  <div class='demo-app'>
+
+    <div class='demo-app-sidebar'>
       <h2>Instrucciones</h2>
-      <ul>
-        <li>Selecciona una fecha para crear un evento.</li>
-        <li>Da click a un evento para eliminarlo.</li>
-      </ul>
-    </div>
-    
-   
+      <p>Selecciona una fecha para crear un evento. Puedes crear un evento de cualquier tipo personal o no.</p>
+      <p>Da click a un evento para eliminarlo.</p>
 
-    <div class='demo-app-sidebar-section'>
-
-      <form >
+      <form>
         <div class="form-group">
-          <input type="text" class="form-control" id="nombreClaseBusqueda" placeholder="Nombre de clase">
+          <select class="form-select input-group" id="tipo" [(ngModel)]="clase.tipo" name="tipo" required  [ngModelOptions]="{standalone: true}">
+            <option *ngFor="let tipo of tiposClase"> {{tipo.tipo}}</option>
+          </select>
         </div>
-        <div class="form-group" >
-          <label for="exampleFormControlSelect1">Sucursal:</label>
-          <select class="form-control" id="exampleFormControlSelect1">
+
+        <div class="form-group">
+          <select class="form-select input-group" [(ngModel)]="clase.sucursal"  [ngModelOptions]="{standalone: true}" id="exampleFormControlSelect1">
             <option *ngFor="let sucursal of this.SucursalesDisponibles">{{sucursal.nombre}}</option>
           </select>
         </div>
-        <div class="form-group">
-          <input type="date" class="form-control" id="exampleFormControlInput1" placeholder="Inicio de busqueda">
+
+        <div class="form-group input-group">
+          <label for="inicio">Hora inicial</label>
+          <input type="time" name="inicio" class="form-control" [(ngModel)]="clase.inicio" id="inicio"  [ngModelOptions]="{standalone: true}"
+            placeholder="Inicial">
         </div>
-        <div class="form-group">
-          <input type="date" class="form-control" id="exampleFormControlInput1" placeholder="Fin de busqueda">
+
+        <div class="form-group input-group">
+          <label for="final">Hora final</label>
+          <input type="time" name="final" class="form-control" [(ngModel)]="clase.final" id="final"  [ngModelOptions]="{standalone: true}" placeholder="Final">
         </div>
-        <div class="form-group">
-          <label for="exampleFormControlTextarea1">Example textarea</label>
-          <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-        </div>
+
+        <button type="submit" (click)="this.buscarClase()" data-bs-toggle="modal"
+        data-bs-target="#BuscarClase" class="btn btn-primary">Buscar</button>
+
       </form>
-      
+
+      <button type="button" (click)="this.buscarClase()" class="btn secondary" data-bs-toggle="modal"
+        data-bs-target="#MostrarClases">Todas las clases</button>
+
 
       <label>
-        <input
-          type='checkbox'
-          [checked]='calendarVisible'
-          (change)='handleCalendarToggle()'
-        />
-        toggle whole calendar
+        <input type='checkbox' [checked]='calendarOptions.weekends' (change)='handleWeekendsToggle()' />
+        Ver fines de semana.
       </label>
+
+
     </div>
-    <div class='demo-app-sidebar-section'>
-      <label>
-        <input
-          type='checkbox'
-          [checked]='calendarOptions.weekends'
-          (change)='handleWeekendsToggle()'
-        />
-        toggle weekends
-      </label>
-    </div>
-    <div class='demo-app-sidebar-section'>
-      <h2>All Events ({{currentEvents.length}})</h2>
-      <ul>
-        <li *ngFor='let event of currentEvents'>
-          <b>{{event.startStr}}</b>
-          <i>{{event.title}}</i>
-        </li>
-      </ul>
+
+    <div class='demo-app-main'>
+      <full-calendar *ngIf='calendarVisible' [options]='calendarOptions'></full-calendar>
     </div>
   </div>
 
-  <div class='demo-app-main'>
-    <full-calendar
-      *ngIf='calendarVisible'
-      [options]='calendarOptions'
-    ></full-calendar>
+
+
+  <!-- Modal -->
+  <div class="modal fade" id="MostrarClases" tabindex="-1" aria-labelledby="eliminarFilaLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h2 class="modal-title" id="eliminarFilaLabel">Todas las clases disponibles</h2>
+
+        </div>
+        <div class="modal-body">
+          <div class="card" *ngFor="let clase of this.clases">
+            <img class="card-img-top" src={{clase.imagen}} alt="Card image cap">
+            <div class="card-body">
+              <div class="row">
+                <div class="col">
+                  <h5 class="card-title">{{clase.tipo}}</h5>
+
+                </div>
+                <div class="col">
+                  <button type="button" class="btn card-button" data-bs-dismiss="modal"
+                    (click)="inscribirme(clase)">Inscribirme</button>
+                </div>
+              </div>
+              <h6 class="card-subtitle mb-2 text-muted">Horario: {{clase.horaInicio}} - {{clase.horaFin}}</h6>
+              <p class="card-text">Se impartirá el día {{clase.fecha}} con una capacidad máxima de {{clase.capacidad}}
+                en la sucursal de {{clase.sucursal}}.</p>
+
+            </div>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn tertiary" data-bs-dismiss="modal">Cancelar</button>
+
+        </div>
+      </div>
+    </div>
   </div>
 
-</div>
-  
+   <!-- Modal -->
+   <div class="modal fade" id="BuscarClase" tabindex="-1" aria-labelledby="eliminarFilaLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h2 class="modal-title" id="eliminarFilaLabel">Resultado de la búsqueda</h2>
+
+        </div>
+        <div class="modal-body">
+          <div class="card" *ngFor="let clase of this.clases">
+            <img class="card-img-top" src={{clase.imagen}} alt="Card image cap">
+            <div class="card-body">
+              <div class="row">
+                <div class="col">
+                  <h5 class="card-title">{{clase.tipo}}</h5>
+
+                </div>
+                <div class="col">
+                  <button type="button" class="btn card-button" data-bs-dismiss="modal"
+                    (click)="inscribirme(clase)">Inscribirme</button>
+                </div>
+              </div>
+              <h6 class="card-subtitle mb-2 text-muted">Horario: {{clase.horaInicio}} - {{clase.horaFin}}</h6>
+              <p class="card-text">Se impartirá el día {{clase.fecha}} con una capacidad máxima de {{clase.capacidad}}
+                en la sucursal de {{clase.sucursal}}.</p>
+
+            </div>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn tertiary" data-bs-dismiss="modal">Cancelar</button>
+
+        </div>
+      </div>
+    </div>
+  </div>
+
+</body>
+
+</html>
