vista registro de cliente lista

--- a/FrontEndCliente/src/app/Componentes/login/login.component.html
+++ b/FrontEndCliente/src/app/Componentes/login/login.component.html
@@ -33,7 +33,10 @@
             </div>
             <button type="submit" (click)="this.login()" class="btn btn-primary">Entrar</button>
           </form>
+          <small>Si no tienes una cuenta <a href="/register">registrate</a>.</small>
+
         </div>
+
       </div>
 
       <div class="col-sm">
@@ -41,7 +44,8 @@
           <img class="logo" src="/assets/Asset 5@4x-8.png">
           <p>¿Estás listo para sentir tu cuerpo arder y renacer de las cenizas? Tenemos las actividades, los
             entrenadores y todos los recursos necesarios para mejorar tu vida al máximo.</p>
-          <small></small>
+
+          
         </div>
       </div>
 
