--- a/FrontEndCliente/src/app/Componentes/registro/registro.component.html
+++ b/FrontEndCliente/src/app/Componentes/registro/registro.component.html
@@ -1,54 +1,189 @@
 <head>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
-  </head>
-  
-  <html>
-  
-  <body>
-    <div class="container">
-      <div class="row">
-  
-        <div class="col-sm">
-          <div class="header-text">
-            <h2>Bienvenido</h2>
-            
-          </div>
-          <div class="LoginForm">
-            <form id="form">
-              <div class="form-group input-group">
-                <span class="marginLeft">
-                  <i class="bi bi-envelope"></i>
-                </span>
-                <input type="email" name="email" class="form-control" [(ngModel)]="usuario.correo" id="myEmail"
-                  placeholder="E-mail">
-              </div>
-              <div class="form-group input-group">
-                <span class="marginLeft">
-                  <i class="bi bi-file-lock2-fill"></i> </span>
-                <input type="password" #myPassword name="password" class="form-control" [(ngModel)]="usuario.password"
-                  id="myPassword" placeholder="Contraseña">
+</head>
 
-              </div>
-              <button type="submit" (click)="this.register()" class="btn btn-primary">Entrar</button>
-            </form>
-          </div>
-        </div>
+<html>
+
+<body>
+    <div class="container">
+        <div class="row">
+
+            <div class="col-sm">
+                <div class="header-text">
+                    <h2>Escribe tus datos para registrarte</h2>
+
+                </div>
+                <div class="LoginForm">
+                    <form id="form">
+                        <div class="row row-input">
+
+                            <div class="col-sm">
+                                <div class="form-group input-group">
+                                    <span class="marginLeft">
+                                        <i class="bi bi-envelope"></i>
+                                    </span>
+                                    <input type="email" name="email" class="form-control" [(ngModel)]="cliente.email"
+                                        id="myEmail" placeholder="E-mail">
+                                </div>
+                            </div>
+                            <div class="col-sm">
+                                <div class="form-group input-group">
+                                    <span class="marginLeft">
+                                        <i class="bi bi-file-lock2-fill"></i> </span>
+                                    <input type="password" #myPassword name="password" class="form-control"
+                                        [(ngModel)]="cliente.contrasena" id="myPassword" placeholder="Contraseña">
+
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="row row-input">
+
+                            <div class="col-sm">
+                                <div class="form-group input-group">
+                                    <span class="marginLeft">
+                                        <i class="bi bi-person-fill"></i> 
+                                    </span>
+                                    <input type="text" name="nombre" class="form-control" [(ngModel)]="cliente.nombre"
+                                        id="nombre" placeholder="Nombre">
+                                </div>
+                            </div>
+
+                        </div>
+
+                        <div class="row row-input">
+
+                            <div class="col-sm">
+                                <div class="form-group input-group">
+                                    <span class="marginLeft">
+                                        <i class="bi bi-person-fill"></i>
+                                    </span>
+                                    <input type="text" name="apellido1" class="form-control"
+                                        [(ngModel)]="cliente.primerApellido" id="apellido1"
+                                        placeholder="Primer Apellido">
+                                </div>
+                            </div>
+                            <div class="col-sm">
+                                <div class="form-group input-group">
+                                    <span class="marginLeft">
+                                        <i class="bi bi-person-fill"></i>
+                                     </span>
+                                    <input type="text" name="apellido2" class="form-control"
+                                        [(ngModel)]="cliente.segundoApellido" id="apellido2"
+                                        placeholder="Segundo Apellido">
+
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="row row-input">
+
+                            <div class="col-sm">
+                                <div class="form-group input-group">
+                                    <span class="marginLeft">
+                                        <i class="bi bi-person-badge-fill"></i>
+                                    </span>
+                                    <input type="number" name="cedula" class="form-control" [(ngModel)]="cliente.cedula"
+                                        id="cedula" placeholder="Cedula">
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="row row-input">
+
+                            <div class="col-sm">
+                                <div class="form-group input-group">
+
+                                    <input type="number" name="imc" min="0" class="form-control"
+                                        [(ngModel)]="cliente.imc" id="imc" placeholder="IMC">
+                                </div>
+                            </div>
+                            <div class="col-sm">
+                                <div class="form-group input-group">
   
-        <div class="col-sm">
-          <div class="InfoContainer">
-            <img class="logo" src="/assets/Asset 5@4x-8.png">
-            <p>¿Estás listo para sentir tu cuerpo arder y renacer de las cenizas? Tenemos las actividades, los
-              entrenadores y todos los recursos necesarios para mejorar tu vida al máximo.</p>
-            <small></small>
-          </div>
+                                    <input type="number" name="peso" min="0" class="form-control"
+                                        [(ngModel)]="cliente.peso" id="peso" placeholder="Peso">
+
+                                </div>
+                            </div>
+                            <div class="col-sm">
+                                <div class="form-group input-group">
+
+                                    <input type="number" name="edad" min="0" class="form-control"
+                                        [(ngModel)]="cliente.edad" id="edad" placeholder="Edad">
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="row row-input">
+
+                            <div class="col-sm">
+                                <div class="form-group input-group">
+                                    <span class="marginLeft">
+                                        <i class="bi bi-signpost-split"></i>
+                                    </span>
+
+                                    <input type="text" name="canton" class="form-control" [(ngModel)]="cliente.canton"
+                                        id="canton" placeholder="Cantón">
+                                </div>
+                            </div>
+
+                            <div class="col-sm">
+                                <div class="form-group input-group">
+                                    <span class="marginLeft">
+                                        <i class="bi bi-signpost-split"></i>
+                                    </span>
+
+                                    <input type="text" name="distrito" class="form-control"
+                                        [(ngModel)]="cliente.distrito" id="distrito" placeholder="Distrito">
+                                </div>
+                            </div>
+
+                            <div class="col-sm">
+                                <div class="form-group input-group">
+                                    <span class="marginLeft">
+                                        <i class="bi bi-signpost-split"></i>
+                                    </span>
+
+                                    <input type="text" name="provincia" class="form-control"
+                                        [(ngModel)]="cliente.provincia" id="provincia" placeholder="Provincia">
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="row row-input">
+
+                            <div class="col-sm">
+                                <div class="form-group input-group">
+                                    <label for="nacimiento">Fecha de nacimiento: </label>
+                                    <input type="date" name="nacimiento" class="form-control"
+                                        [(ngModel)]="cliente.nacimiento" id="nacimiento"
+                                        placeholder="Fecha de nacimiento">
+                                </div>
+                            </div>
+
+                        </div>
+
+                        <button type="submit" (click)="this.register()" class="btn btn-primary">Registrar</button>
+                    </form>
+                </div>
+            </div>
+
+            <div class="col-sm">
+                <div class="InfoContainer">
+                    <img class="logo" src="/assets/Asset 5@4x-8.png">
+                    <p>¿Estás listo para sentir tu cuerpo arder y renacer de las cenizas? Tenemos las actividades, los
+                        entrenadores y todos los recursos necesarios para mejorar tu vida al máximo.</p>
+                    <small></small>
+                </div>
+            </div>
+
         </div>
-  
-      </div>
     </div>
-  </body>
-  
-  </html>
-  
-  <script>
-  
-  </script>
+</body>
+
+</html>
+
+<script>
+
+</script>
