--- a/FrontEndCliente/src/app/inicio-cliente/inicio-cliente.component.css
+++ b/FrontEndCliente/src/app/inicio-cliente/inicio-cliente.component.css
@@ -34,14 +34,19 @@
   body,html{
     background: linear-gradient(45deg, #e7e3d6   , #6b6b69  );
     align-content: center;
-    
+    font-family:  Georgia, 'Times New Roman', Times, serif;
+
     }
     
-    h6, h5, h4, h3, h2, h1, p{
+    h6, h5, h4, h3, h2, h1, p, label{
       text-align: left;
       color: white ;
       margin-left: 5%;
-      font:  Georgia, 'Times New Roman', Times, serif;
+      font-family:  Georgia, 'Times New Roman', Times, serif;
+    }
+    
+    label {
+      color: #293233
     }
     
     p{
@@ -113,6 +118,8 @@
       color: #293233;
       box-shadow: 1px 8px 8px 0px rgba(31, 57, 58, 0.5);
       width: 75%;
+      font: 12px Georgia, 'Times New Roman', Times, serif;
+
     }
 
     .secondary {
@@ -193,7 +200,7 @@
   border-radius: 30px;
   margin: 0%;
   padding: 5px;
-  background: linear-gradient(65deg, #d8353d   , #f04b53   ) ;
+  background: linear-gradient(65deg, #d8353d   , #f04b53    ) ;
   color: white;
   box-shadow: 1px 2px 2px 0px rgba(31, 57, 58, 0.2);
 
@@ -207,5 +214,9 @@
 
 .input-group:hover{
   color: #2A7B6B;
+
 }
-  
+full-calendar{
+  font-family:  Georgia, 'Times New Roman', Times, serif;
+
+}
