--- a/FrontEndCliente/src/app/Componentes/registro/registro.component.css
+++ b/FrontEndCliente/src/app/Componentes/registro/registro.component.css
@@ -7,10 +7,11 @@ body,html{
     background-size:cover;
   
     -webkit-font-smoothing: antialiased;
+    font: Georgia, 'Times New Roman', Times, serif;
   }
   
   h6, h5, h4, h3, h2, h1, p{
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font: Georgia, 'Times New Roman', Times, serif;
     text-align: center;
     color: white ;
   }
@@ -66,6 +67,8 @@ body,html{
     padding: 3%;
     border-radius: 50px;
     box-shadow: 1px 8px 8px 0px rgba(29, 29, 28, 0.479);
+    font: Georgia, 'Times New Roman', Times, serif;
+
   }
   
   .row-input{
@@ -91,6 +94,7 @@ body,html{
     color: #293233;
     box-shadow: 1px 8px 8px 0px rgba(31, 57, 58, 0.5);
     width: 145%;
+
   }
   
   .marginLeft{
