--- a/FrontEndCliente/src/app/Componentes/registro/registro.component.html
+++ b/FrontEndCliente/src/app/Componentes/registro/registro.component.html
@@ -1,11 +1,13 @@
 <head>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.3.1/jspdf.umd.min.js"></script>
+
 </head>
 
 <html>
 
-<body>
-    <div class="container">
+<body >
+    <div class="container" id="pdfTable" #pdfTable>
         <div class="row">
 
             <div class="col-sm">
