--- a/FrontEnd/src/app/Dashboard/asociacion-inventario/asociacion-inventario.component.html
+++ b/FrontEnd/src/app/Dashboard/asociacion-inventario/asociacion-inventario.component.html
@@ -1,7 +1,7 @@
 <div class="contenedorPantalla">
 
     <div class="container">
-        <div class="row">
+        <div class="row" *ngFor="let sucursal of ListaSucursales">
 
             <div class="col columna1">
                 <img
@@ -9,9 +9,9 @@
             </div>
             <div class="col columna2">
                 <div class="row">
-                    <h5>Nombre de la sucursal</h5>
+                    <h2>Nombre de la sucursal: {{sucursal.nombre}}</h2> 
                 </div>
-                <div class="row"><label>Dirección:</label></div>
+                <div class="row"><label>Dirección: {{sucursal.provincia}}, {{sucursal.canton}}, {{sucursal.distrito}}</label></div>
 
             </div>
             <div class="col-4">
